add role, permission based control

--- a/realm-file/src/main/resources/shiro-users.properties
+++ b/realm-file/src/main/resources/shiro-users.properties
@@ -1,7 +1,21 @@
-user.alice = alice-password,admin
-user.bob = bob-password,user
-user.chris = chris-password,guest
 
+user.alice = alice-password, admin
+user.bob = bob-password, user
+user.chris = chris-password, file-operator
+user.david = david-password, log-archiver
+
+
+# 'admin' role has all permissions
 role.admin = *
-role.user = articles:read,write
-role.guest = articles:read:100
+
+# 'user' role can read and write files
+# when command(,) is used internally, the double quotes (") is needed to avoid parsing errors.
+# this is equivalent to:
+# role.user = files:read, files:write
+role.user = "files:read,write"
+
+# 'file-operator' role can do anything to files
+role.file-operator = files:*
+
+# 'log-archiver' role can read and archive log files
+role.log-archiver = "files:read,archive:log"
